--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
     "tailwindcss": "^4.1.16"
+  },
+  "scripts": {
+    "tailwind:watch": "npx @tailwindcss/cli -i ./styles.css -o ./output.css --watch"
   }
 }
